fix: embedder js icon contrast

--- a/embedder/sidebar-component.css
+++ b/embedder/sidebar-component.css
@@ -74,7 +74,7 @@ file-navigator {
 }
 
 sidebar-component .mime-js {
-  background-color: #FFEB3B;
+  background-color: #FDD835;
 }
 
 sidebar-component .mime-css {
